# EspOS

./: .espflash.toml  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  build.rs  diagram.json  esp32s3_improvements.md  installation_guide_mac_m4.md  report.md  wokwi.toml
.cargo/: config.toml
patches/esp-hal-embassy/: .cargo_vcs_info.json  Cargo.toml
patches/esp-hal-embassy/src/executor/: thread.rs
src/: main.rs  memory.rs  state_machine.rs
src/drivers/: l298n.rs  mod.rs  mpu6500.rs  ssd1306.rs  st7789.rs  vl53l0x.rs
src/hal/: audio.rs  chassis.rs  mod.rs  sensor.rs
src/tasks/: can_bus.rs  cli.rs  heartbeat.rs  imu.rs  mod.rs  motor.rs  telemetry.rs  ui.rs  web_server.rs  wifi.rs
