[package]
name = "espos"
version = "0.1.0"
edition = "2021"
description = "Modular embedded Rust OS for ESP32-S3 using Embassy async framework"
license = "MIT"

[dependencies]
# Hardware Abstraction Layer for ESP32-S3
# The "unstable" feature is required for direct register access used by the
# TWAI (CAN), I2S, and PSRAM peripheral drivers.  Track stabilisation at
# https://github.com/esp-rs/esp-hal/issues.
esp-hal = { version = "0.22", features = ["esp32s3", "unstable"] }

# Embassy integration layer for esp-hal (timer drivers, executor init)
esp-hal-embassy = { version = "0.5", features = ["esp32s3"] }

# Async executor with sufficient task arena for all spawned tasks
embassy-executor = { version = "0.6", features = ["task-arena-size-20480"] }

# Async timers and time-keeping
embassy-time = "0.3"

# Async channels and mutexes for inter-task communication
embassy-sync = "0.6"

# TCP/UDP/DHCP network stack
embassy-net = { version = "0.4", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }

# Panic handler and backtrace for ESP32-S3
esp-backtrace = { version = "0.14", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

# Logging over UART
esp-println = { version = "0.12", features = ["esp32s3", "log"] }

# Heap allocator supporting both SRAM and PSRAM regions
esp-alloc = "0.5"

# WiFi driver with Embassy async support
esp-wifi = { version = "0.12", features = ["esp32s3", "wifi", "embassy-net"] }

# 2-D graphics primitives for the virtual framebuffer
embedded-graphics = "0.8"

# Stack-allocated collections (no heap required)
heapless = "0.8"

# Statically-initialised cells needed for Embassy statics
static_cell = "2"

# Logging facade
log = "0.4"

# Critical-section primitives
critical-section = "1.2"

# Future combinators (select!, join!)
embassy-futures = "0.1"

# Time types used for the hardware watchdog timeout
fugit = "0.3"

[profile.release]
# Optimise for size on constrained flash
opt-level = "s"
debug = false
lto = "fat"
codegen-units = 1

[profile.dev]
# Keep debug info while developing; still optimise enough to fit
opt-level = "s"
debug = true
