[package]
name = "espos"
version = "0.1.0"
edition = "2021"
description = "Modular embedded Rust OS for ESP32-S3 using Embassy async framework"
license = "MIT"

[dependencies]
# Hardware Abstraction Layer for ESP32-S3
# The "unstable" feature is required for direct register access used by the
# TWAI (CAN), I2S, and PSRAM peripheral drivers.  Track stabilisation at
# https://github.com/esp-rs/esp-hal/issues.
esp-hal = { version = "0.23", features = ["esp32s3"] }

# Embassy integration layer for esp-hal (timer drivers, executor init)
esp-hal-embassy = { version = "0.6", features = ["esp32s3"] }

# Async executor with sufficient task arena for all spawned tasks
embassy-executor = { version = "0.7", features = ["task-arena-size-20480"] }

# Async timers and time-keeping
embassy-time = "0.4"

# Async channels and mutexes for inter-task communication
embassy-sync = "0.6"

# TCP/UDP/DHCP network stack
embassy-net = { version = "0.6", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }

# Panic handler and backtrace for ESP32-S3
esp-backtrace = { version = "0.15", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

# Logging over UART
esp-println = { version = "0.13", default-features = false, features = ["esp32s3", "log", "uart", "critical-section"] }

# Heap allocator supporting both SRAM and PSRAM regions
esp-alloc = "0.6"

# WiFi driver with Embassy async support
esp-wifi = { version = "0.12", features = ["esp32s3", "wifi"] }

# 2-D graphics primitives for the virtual framebuffer
embedded-graphics = "0.8"

# Embedded I/O traits for async read/write
embedded-io-async = "0.6"

# Stack-allocated collections (no heap required)
heapless = "0.8"

# Statically-initialised cells needed for Embassy statics
static_cell = "2"

# Logging facade
log = "0.4"

# Critical-section primitives
critical-section = "1.2"

# Future combinators (select!, join!)
embassy-futures = "0.1"

# Time types used for the hardware watchdog timeout
fugit = "0.3"

# Software floating-point math (no_std)
libm = "0.2"

[profile.release]
opt-level = 2
debug = false
lto = false

[profile.dev]
opt-level = 2
debug = true

# esp-wifi requires opt-level 2+, override if any profile uses less
[profile.dev.package.esp-wifi]
opt-level = 2

# Local patch: fixes `low_power_wait = false` compile error in 0.6.0 where
# SIGNAL_WORK_THREAD_MODE uses AtomicBool without the cfg guard.
[patch.crates-io]
esp-hal-embassy = { path = "patches/esp-hal-embassy" }
